@@ -11,6 +11,7 @@ class RspecGenerator < Rails::Generator::Base
       m.directory 'spec'
       m.template 'spec_helper.rb', 'spec/spec_helper.rb'
       m.file     'test2spec.erb', 'spec/test2spec.erb'
+      m.directory 'lib/tasks'
       m.template 'rspec.rake', 'lib/tasks/rspec.rake'
 
       # Copy out the rspec_model generator
